--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="hero-container">
             <h1>Welcome to Mtendere Education Consult</h1>
             <h2>Study Abroad.</h2>
-            <img src="" alt="Hero Imgs">
+            <img src="img/Malawian Students on Campus at Chandigarh University.JPG" alt="Hero Imgs">
             <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
         </div>
 
